Second Phase issues fixed